cli/tests/testdata/test/fail_fast.out
Check [WILDCARD]/test/fail_fast.ts
running 10 tests from ./test/fail_fast.ts
test 1 ... FAILED ([WILDCARD])

 ERRORS 

test 1 => ./test/fail_fast.ts:[WILDCARD]
error: Error
  throw new Error();
        ^
    at [WILDCARD]/test/fail_fast.ts:2:9

 FAILURES 

test 1 => ./test/fail_fast.ts:[WILDCARD]

FAILED | 0 passed | 1 failed ([WILDCARD])

error: Test failed
